Fixed Button Gap In Conference Scheduler Navbar
The navbar of the conference scheduler had a gap between itself and the main calendar. This has been fixed.

--- a/app/assets/stylesheets/custom/_classes.less
+++ b/app/assets/stylesheets/custom/_classes.less
@@ -65,6 +65,10 @@ p.paragraph-small {
   border: 1px solid @color-conference-schedule-scheduler-border;
 }
 
+.conference-scheduler-border .dhx_cal_header {
+  border-top-width: 0px;
+}
+
 .conference-scheduler-event {
   position: relative;
   background-color: white;
